auto posting auto reward auto transfer

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ __pycache__/
 *.pyc
 Steemjs/SteemBotCourses/examples/config.json
 MyBots/PaybackBot/config.json
+MyBots/PaybackBot/config - ohrak22.json
